--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,6 +1,18 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+# require 'yaml'
+# current_dir    = File.dirname(File.expand_path(__FILE__))
+# config_file = ENV['VAGRANT_CONFIG_FILE'] || "vagrant-config.yml"
+# cfg        = YAML.load_file("#{current_dir}/" + config_file)
+
+# ansible_config_file = ENV['ANSIBLE_CONFIG_FILE'] || "scripts/vars.yml"
+# puts "Config files\n\tVagrant: " + config_file + "\n\tAnsible: " + ansible_config_file
+
+# resources_config = cfg['ressources']
+# ansible_config = cfg['ansible']
+
+
 Vagrant.configure("2") do |config| 
     config.vm.box = "ubuntu/focal64"
     config.vm.network "forwarded_port", guest: 443, host: 8443
@@ -13,6 +25,20 @@ Vagrant.configure("2") do |config|
       vb.name = "POC-k3s"
     end
     config.vm.provision "shell", path: "scripts/ansible-installer.sh"
-    config.vm.provision "shell", path: "scripts/run-playbooks.sh"
+    # config.vm.provision "shell", path: "scripts/run-playbooks.sh"
+    
+    # Requirements for ansible
+    # config.vm.provision "shell", inline: <<-SHELL
+    # test -e /usr/bin/python || (apt-get update && apt-get install -y python3-minimal build-essential python3-pip && python3 -m pip install ansible ansible-base ansible-core && ansible-galaxy collection install -r /opt/ansible/requirements.yml)
+    # SHELL
+    
+    config.vm.provision "ansible" do |ansible|
+      ansible.verbose = "vv" #ansible_config['verbose_args']
+      ansible.playbook = "scripts/k3s.yml"
+      ansible.config_file = "scripts/ansible.cfg"
+      # ansible.galaxy_role_file = "requirements.yml"
+      # ansible.galaxy_command = "sudo ansible-galaxy collection install -r %{role_file} --force && sudo ansible-galaxy role install -r %{role_file} --force"
+      # ansible.extra_vars = "scripts@" + ansible_config_file
+    end
+    
   end
-  
