reorganized ansible folders for better usability

--- a/vagrant/ansible.cfg
+++ b/vagrant/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 host_key_checking = False
-roles_path = ./roles
+# roles_path = /opt/ansible/roles
 nocows = 1
 forks  = 8
 retry_files_enabled = False
