--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -6,7 +6,7 @@
 # config_file = ENV['VAGRANT_CONFIG_FILE'] || "vagrant-config.yml"
 # cfg        = YAML.load_file("#{current_dir}/" + config_file)
 
-# ansible_config_file = ENV['ANSIBLE_CONFIG_FILE'] || "scripts/vars.yml"
+# ansible_config_file = ENV['ANSIBLE_CONFIG_FILE'] || "vars.yml"
 # puts "Config files\n\tVagrant: " + config_file + "\n\tAnsible: " + ansible_config_file
 
 # resources_config = cfg['ressources']
@@ -17,14 +17,14 @@ Vagrant.configure("2") do |config|
     config.vm.box = "ubuntu/focal64"
     config.vm.network "forwarded_port", guest: 443, host: 8443
     config.vm.network "forwarded_port", guest: 80, host: 8080
-    config.vm.synced_folder "../ansible", "/opt/ansible"
+    # config.vm.synced_folder "../ansible", "/opt/ansible"
     config.vm.provider "virtualbox" do |vb|
       vb.gui = false
       vb.memory = "4096"
       vb.cpus = 2
       vb.name = "POC-k3s"
     end
-    config.vm.provision "shell", path: "scripts/ansible-installer.sh"
+    # config.vm.provision "shell", path: "ansible-installer.sh"
     # config.vm.provision "shell", path: "scripts/run-playbooks.sh"
     
     # Requirements for ansible
@@ -33,9 +33,9 @@ Vagrant.configure("2") do |config|
     # SHELL
     
     config.vm.provision "ansible" do |ansible|
-      ansible.verbose = "vv" #ansible_config['verbose_args']
-      ansible.playbook = "scripts/k3s.yml"
-      ansible.config_file = "scripts/ansible.cfg"
+      ansible.verbose = "v" #ansible_config['verbose_args']
+      ansible.playbook = "k3s.yml"
+      ansible.config_file = "ansible.cfg"
       # ansible.galaxy_role_file = "requirements.yml"
       # ansible.galaxy_command = "sudo ansible-galaxy collection install -r %{role_file} --force && sudo ansible-galaxy role install -r %{role_file} --force"
       # ansible.extra_vars = "scripts@" + ansible_config_file
