--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -24,17 +24,17 @@ Vagrant.configure("2") do |config|
       vb.cpus = 2
       vb.name = "POC-k3s"
     end
+    # Requirements for ansible
+    # config.vm.provision "shell", inline: <<-SHELL
+    # test -e /usr/bin/python || (apt-get update && apt-get install -y python3-minimal build-essential python3-pip && python3 -m pip install jinja2==3.0.0 ansible-base ansible-core)
+    # SHELL
     # config.vm.provision "shell", path: "ansible-installer.sh"
     # config.vm.provision "shell", path: "scripts/run-playbooks.sh"
     
-    # Requirements for ansible
-    # config.vm.provision "shell", inline: <<-SHELL
-    # test -e /usr/bin/python || (apt-get update && apt-get install -y python3-minimal build-essential python3-pip && python3 -m pip install ansible ansible-base ansible-core && ansible-galaxy collection install -r /opt/ansible/requirements.yml)
-    # SHELL
     
     config.vm.provision "ansible" do |ansible|
       ansible.verbose = "v" #ansible_config['verbose_args']
-      ansible.playbook = "k3s.yml"
+      ansible.playbook = "terraform.yml"
       ansible.config_file = "ansible.cfg"
       # ansible.galaxy_role_file = "requirements.yml"
       # ansible.galaxy_command = "sudo ansible-galaxy collection install -r %{role_file} --force && sudo ansible-galaxy role install -r %{role_file} --force"
