updated and  added config to deploy  manifest with terraform

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -33,8 +33,8 @@ Vagrant.configure("2") do |config|
     
     
     config.vm.provision "ansible" do |ansible|
-      ansible.verbose = "v" #ansible_config['verbose_args']
-      ansible.playbook = "terraform.yml"
+      ansible.verbose = "vv" #ansible_config['verbose_args']
+      ansible.playbook = "k3s.yml"
       ansible.config_file = "ansible.cfg"
       # ansible.galaxy_role_file = "requirements.yml"
       # ansible.galaxy_command = "sudo ansible-galaxy collection install -r %{role_file} --force && sudo ansible-galaxy role install -r %{role_file} --force"
