--- a/vagrant/terraform.yml
+++ b/vagrant/terraform.yml
@@ -1,8 +1,10 @@
 ---
+
 - name: Terraform Deployment
   hosts: all, localhost
-  become: yes
-  gather_facts: true
+  connection: local
+  gather_facts: True
+  ignore_errors: True
   vars:
     project_dir: "/vagrant/terraform/"
     state: present
@@ -25,7 +27,14 @@
           unit_number: 3
 
   pre_tasks:
+
+    - name: "update and upgrade apt packages."
+      become: yes
+      apt:
+        upgrade: yes
+        update_cache: yes
     - name: Install necessary packages
+      become: yes
       apt:
         name: "{{ packages }}"
         state: present
@@ -49,7 +58,9 @@
 
 
   roles:
+    # - installDep
     - role: ansible-role-terraform
+      become: yes
       vars:
         terraform_version: 1.3.8
         terraform_pkg_url: "https://releases.hashicorp.com/terraform/{{ terraform_version_to_install }}/terraform_{{ terraform_version_to_install }}_{{ os_type }}_{{ base_arch[ansible_architecture] | default('amd64') }}.zip"
@@ -69,14 +80,14 @@
           Solaris: 'Linux-Unix'
           Darwin: 'Linux-Unix'
           Win32NT: 'Windows'
-  # tasks:
+  tasks:
     # - name: Executing ansible-pull on servers
     #   command: ansible-pull -U https://gitlab.com/hemanth22/ansible-pull-terraform.git
 
-    # - name: Basic deploy of a service
-    #   community.general.terraform:
-    #     project_path: '{{ project_dir }}'
-    #     state: present
+    - name: Basic deploy of a service
+      community.general.terraform:
+        project_path: '{{ project_dir }}'
+        state: present
 
     # - name: Define the backend configuration at init
     #   community.general.terraform:
