--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -17,6 +17,8 @@ Vagrant.configure("2") do |config|
     config.vm.box = "ubuntu/focal64"
     config.vm.network "forwarded_port", guest: 443, host: 8443
     config.vm.network "forwarded_port", guest: 80, host: 8080
+    config.vm.network "forwarded_port", guest: 8081, host: 8081
+    config.vm.network "forwarded_port", guest: 8082, host: 8082
     # config.vm.synced_folder "../ansible", "/opt/ansible"
     config.vm.provider "virtualbox" do |vb|
       vb.gui = false
