--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -23,8 +23,12 @@ Vagrant.configure("2") do |config|
     config.vm.provider "virtualbox" do |vb|
       vb.gui = false
       vb.memory = "4096"
-      vb.cpus = 2
+      vb.cpus = 4
       vb.name = "POC-k3s"
+      vb.customize ["modifyvm", :id, "--nested-hw-virt", "on"]
+      vb.customize ["modifyvm", :id, "--accelerate3d", "on"]
+      vb.customize ["modifyvm", :id, "--graphicscontroller", "vmsvga"] 
+      vb.customize ["modifyvm", :id, "--vram", "64"]
     end
     # Requirements for ansible
     # config.vm.provision "shell", inline: <<-SHELL
@@ -38,7 +42,10 @@ Vagrant.configure("2") do |config|
       ansible.verbose = "vv" #ansible_config['verbose_args']
       ansible.playbook = "k3s.yml"
       ansible.config_file = "ansible.cfg"
-      # ansible.galaxy_role_file = "requirements.yml"
+      ansible.galaxy_roles_path = "./roles"        
+      ansible.galaxy_role_file = "requirements.yml"
+      ansible.galaxy_command = "sudo ansible-galaxy install --role-file=%{role_file} --roles-path=%{roles_path} --force"
+      ansible.galaxy_command = "sudo ansible-galaxy collection install -r requirements.yml -p /vagrant/roles"
       # ansible.galaxy_command = "sudo ansible-galaxy collection install -r %{role_file} --force && sudo ansible-galaxy role install -r %{role_file} --force"
       # ansible.extra_vars = "scripts@" + ansible_config_file
     end
